--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo SI">
-<meta property="og:description" content="Name id2485">
-<meta property="og:image" content="https://img2.akspic.ru/crops/3/8/1/0/7/170183/170183-doroga-legkovyye_avtomobili-art-reddit-shina-1920x1080.png">
+<meta property="og:title" content="Vse bodo dale noge narazen">
+<meta property="og:description" content="Super novice za vse moške!">
+<meta property="og:image" content="https://i.imgur.com/MQJa6d5.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
