--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Todas las chicas se abren de piernas">
-<meta property="og:description" content="¡Buenas noticias para todos los hombres!">
-<meta property="og:image" content="https://i.imgur.com/GAlJTTG.jpg">
+<meta property="og:title" content="Geo ES">
+<meta property="og:description" content="Name id2606">
+<meta property="og:image" content="https://img1.akspic.ru/crops/8/1/1/5/6/165118/165118-superkar-legkovyye_avtomobili-mclaren_senna-avtoshou-kapyushon-1920x1080.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
