--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
 <meta property="og:title" content="Todas las mujeres te abrirán sus piernas">
 <meta property="og:description" content="Muy buenas noticias para los hombres!">
-<meta property="og:image" content="https://i.imgur.com/NWy8MKz.jpg">
+<meta property="og:image" content="https://i.imgur.com/vlxP0uf.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
