--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo NP">
-<meta property="og:description" content="Name id2748">
-<meta property="og:image" content="https://img3.akspic.ru/crops/7/6/6/6/6/166667/166667-lambordzhini-legkovyye_avtomobili-superkar-zdanie-neboskreb-1920x1080.jpg">
+<meta property="og:title" content="शारीरिक सम्पर्कको लागि सबै युवतीहरू तयार हुन्छन्">
+<meta property="og:description" content="सम्पपूर्ण पुरुषहरूको लागि खुशीको खबर!">
+<meta property="og:image" content="https://i.imgur.com/ilsnn00.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
