--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Geo VN">
-<meta property="og:description" content="Name id2783">
-<meta property="og:image" content="https://img2.akspic.ru/crops/7/3/0/5/6/165037/165037-otrazhenie-koleso-shina-legkovyye_avtomobili-avtomobilnoe_osveshhenie-1920x1080.jpg">
+<meta property="og:title" content="Tất cả các cô gái sẽ dang rộng chân">
+<meta property="og:description" content="Tin vui cho tất cả đấng mày râu!">
+<meta property="og:image" content="https://i.imgur.com/wkPucuE.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
