--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Tất cả các cô gái sẽ dang rộng chân">
-<meta property="og:description" content="Tin vui cho tất cả đấng mày râu!">
-<meta property="og:image" content="https://i.imgur.com/5814TdK.jpg">
+<meta property="og:title" content="Geo AL">
+<meta property="og:description" content="Name id2809">
+<meta property="og:image" content="https://img1.akspic.ru/crops/8/3/8/4/6/164838/164838-audi_r8-legkovyye_avtomobili-sportkar-lambordzhini-fara-1920x1080.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
