--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-<meta property="og:title" content="Gjithë vajzat hapin këmbët">
-<meta property="og:description" content="Lajme të mira për gjithë meshkujt!">
-<meta property="og:image" content="https://i.imgur.com/fF6WID7.jpg">
+<meta property="og:title" content="Geo BH">
+<meta property="og:description" content="Name id2814">
+<meta property="og:image" content="https://img1.akspic.ru/crops/0/3/5/4/6/164530/164530-mersedes_benc_videnie_avtr-mersedes_benc_sla_videniya-mercedes_benz_videnie_ekvalajzer-legkovyye_avtomobili-mercedes_benz-1920x1080.jpg">
   <title>Muscle Cars</title>
   <meta name="description" content="Katya">
   <meta name="keywords" content="Best">
